WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
64789
`<a ping>`'s `Ping-From` implementation doesn't match the spec.
https://bugs.webkit.org/show_bug.cgi?id=64789
Summary
`<a ping>`'s `Ping-From` implementation doesn't match the spec.
Mike West
Reported
2011-07-19 02:47:43 PDT
According to
http://www.whatwg.org/specs/web-apps/current-work/multipage/links.html#hyperlink-auditing
`<a ping>` should send `Ping-From` HTTP header in addition to a `referer` header when pinging an origin distinct from the initial document (when the initial document wasn't loaded over HTTPS. Currently, WebKit only sends the referrer header. I'm not really convinced that the spec is correct here, as the additional header seems completely redundant, but we should probably follow the letter of the spec here. Patch for review in a moment.
Attachments
Patch for review.
(4.07 KB, patch)
2011-07-19 02:55 PDT
,
Mike West
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mike West
Comment 1
2011-07-19 02:55:17 PDT
Created
attachment 101292
[details]
Patch for review.
Nate Chapin
Comment 2
2011-07-19 12:07:12 PDT
Comment on
attachment 101292
[details]
Patch for review. Did the spec change? I was pretty sure that the spec said Ping-From and Referer were mutually exclusive when ping was implemented in WebKit. I agree that this patch matches the behavior as it's currently specced, though.
Mike West
Comment 3
2011-07-19 14:08:15 PDT
Comment on
attachment 101292
[details]
Patch for review. Alright, if we agree that this matches the spec, then I'd ask you to throw this into the commit queue for me. Thanks!
WebKit Review Bot
Comment 4
2011-07-19 14:56:51 PDT
Comment on
attachment 101292
[details]
Patch for review. Clearing flags on attachment: 101292 Committed
r91306
: <
http://trac.webkit.org/changeset/91306
>
WebKit Review Bot
Comment 5
2011-07-19 14:56:56 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug