Sending a `Ping-From` header for cross-origin pings from non-HTTPS documents. https://bugs.webkit.org/show_bug.cgi?id=64789

Also a drive-by cleanup of whitespace.

Patch by Mike West <mkwst@chromium.org> on 2011-07-19
Reviewed by Nate Chapin.

Source/WebCore:

* loader/PingLoader.cpp:
(WebCore::PingLoader::loadImage):
(WebCore::PingLoader::sendPing):

LayoutTests:

* http/tests/navigation/ping-cross-origin-expected.txt:

Canonical link: https://commits.webkit.org/80549@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91306 268f45cc-cd09-0410-ab3c-d52691b4dbfc